tests/lean/t4.lean.expected.out
N : Type
a : N
Bool -> Bool : Type
F.{2} : Type.{2} -> Type.{2}
F.{u} : Type.{u} -> Type.{u}
f : N -> N -> N
len.{1} : Pi (A : Type) (n : N) (v : vec.{1} A n), N
fun (B : Bool), (B -> B) : Bool -> Bool
fun (A : Type.{l_1}), (A -> A) : Type.{l_1} -> Type.{l_1}
fun {C : Type.{l_2}}, C : Type.{l_2} -> Type.{l_2}
t4.lean:25:6: error: unknown identifier 'A'
R.{1 0} : Type -> Bool
fun (x : N) (y : N), x : N -> N -> N
choice N tst.N
tst.N
N
foo.M
tst.M : Type.{2}
foo.M : Type.{3}
foo.M : Type.{3}
t4.lean:48:6: error: unknown identifier 'M'
ok
Declarations:
tst.M
tst.N
N
a
F
R
len
vec
f
foo.M
Bool
-------------
